RISDEV-10186
Create Lucene api endpoint for Literature
*Added advanced search literature endpoint
*Removed double decoding bug
*Enabled advanced search with empty search
*Refactored advanced search into a new service AdvancedSearchService
*Refactored advanced search tests
*Added test coverage